styles/Assistant.module.scss
$text-box-bg: rgb(58, 58, 58);
$text-box-weather: rgb(113, 171, 224);
$text-box-news: rgb(134, 142, 255);

.wrapper {
  position: fixed;
  bottom: 25px;
  right: 25px;
  align-items: center;
  gap: 25px;
  z-index: 10;
  font-size: 1.25rem;
}
.wrapper.hide {
  display: none;
}
.wrapper.show {
  display: flex;
}

.assistantContainer {
  position: relative;
  width: 6em;
  height: 6em;
  border-radius: 10px;
  overflow: hidden;
  box-shadow: 0 5px 10px var(--backdrop);
}

.assistantTextBox {
  background: var(--backdrop-dark);
  color: var(--white);
  padding: 0.4em 1em;
  border-radius: 10px;
  max-width: 400px;
  box-shadow: -2px 0.5px 5px var(--backdrop);
  position: relative;
  &::before {
    content: "";
    position: absolute;
    right: -16px;
    top: calc(50% - 7px);
    width: 0;
    height: 0;
    border: 7px solid transparent;
    border-left: 16px solid var(--backdrop-dark);
    border-right: 0;
  }
}

.newsMessage {
  .newsContainer {
    background: $text-box-news;
    width: 100%;
    border-radius: 10px;
    overflow: hidden;
    margin: 0.75em auto;

    .newsImgContainer {
      border-radius: 10px 10px 0 0;
      width: 400px;
      max-height: 400px;
      overflow: hidden;
      display: flex;
      justify-content: flex-start;

      .newsImg {
        width: 400px;
        height: auto;
      }
    }

    .newsTitle {
      display: block;
      font-size: 1.125rem;
      font-weight: 600;
      margin: 0.5em 0.75em;
    }

    .newsDescription {
      font-size: 1rem;
      font-weight: 400;
      margin: 1em 0.75em;
    }
  }
}

.weatherMessage {
  .display {
    display: grid;
    grid-template-areas:
      "icon temperature"
      "icon feels-like";
    gap: 0.5em;
    margin: 0.75em auto;
    padding: 0 0.5em 0.5em 0.5em;
    background: $text-box-weather;
    border-radius: 10px;
    max-width: 260px;

    .icon {
      grid-area: icon;
      display: flex;
      justify-self: center;
      flex-direction: column;
      align-items: center;
      width: 100px;
      & > span {
        margin-top: -20px;
      }
      @media screen and (max-width: 400px) {
        display: none;
      }
    }

    .temperature {
      grid-area: temperature;
      margin-top: 15px;
      & > div {
        font-weight: 600;
        font-size: 0.75rem;
      }
    }

    .feelsLike {
      grid-area: feels-like;
      & > div {
        font-weight: 600;
        font-size: 0.75rem;
      }
    }
  }
}

@media screen and (max-width: 600px) {
  .assistantContainer {
    display: none;
  }
  .assistantTextBox {
    max-width: max(100vw, 100px);
  }
}

